Deployment/webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-client
spec:
  selector:
    app: dashboard-client
  ports:
    - port: 80
